test/errors/type/list/__add3.yasl
[].__add(true, 1)
