test/errors/type/list/__add3.yasl.err
TypeError: list.__add expected arg in position 1 to be of type list, got arg of type int. (line 1)
